# nsa-vibe

./: .env.example  .env.example.4090  .env.example.a100  .env.example.cpu  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Discussion.md  GPU-Runbook-Report-2025-08-21-COMPLETE.md  GPU_EVIDENCE_FINAL_REPORT.md  MEMORY_UNITS_CLARIFICATION.md  Makefile  NSA-64k-Needle-Test-Report-224091b5.md  NSA-Forward-Pass-Proof.md  NSA-Proof-Screenshot.md  NSA_BACKWARD_COMPREHENSIVE_TEST_REPORT.md  NSA_BACKWARD_RESEARCH_REPORT.md  NSA_BACKWARD_TEST_RESULTS.md  NSA_COMPREHENSIVE_TESTING_REPORT.md  NSA_COMPREHENSIVE_TEST_REPORT.md  NSA_DDP_HANG_ANALYSIS_UPDATE.md  NSA_DDP_SAFE_MODE_FINAL_REPORT.md  NSA_FIX_VERIFICATION.md  NSA_M7C_2xA100_PRODUCTION_TEST_REPORT.md  NSA_M7C_FSDP_TEST_RESULTS_REPORT.md  NSA_M7C_FSDP_VALIDATION_REPORT_2025-08-23.md  NSA_M7C_MEMORY_DIAGNOSTIC_REPORT.md  NSA_M7C_TRAINING_CRITICAL_ANALYSIS.md  NSA_PRODUCTION_TEST_ANALYSIS.md  NSA_PRODUCTION_TRAINING_REPORT.md  NSA_TEST_ENGINEER_ACTION_PLAN.md  NSA_TEST_ENGINEER_EVIDENCE_REPORT.md  NSA_TEST_ENGINEER_FINAL_REPORT.md  NSA_TEST_EVIDENCE_FINAL.md  NSA_TRAINING_INVESTIGATION_REPORT.md  Oneshot-Validation-Report-2025-08-21.md  PRD.md  README.md  (+31 more)
.github/: PR_BODY.md  PR_BODY_UPDATED.md  PR_M7_Training_Readiness_TestPlan.md
.mentat/: README.md  format.sh  setup.sh
Documentation/: M0-M3-RTX-4090-Validation-Report.md  M4-Benchmark-Results.md  M4-Triton-Selection-Test-Plan.md  RTX4090-FA2-Benchmark-Final-Report.md  Triton-Kernel-Problems-Analysis.md  dense_final_detailed.csv  prime-intellect-api-reference.md  varlen_results.csv
baselines/: a100_decode_guard.json
bench/: bench_decode.py  bench_fa2.py  bench_gate.py  bench_masked.py  (+13 more)
(+387 files in other folders)
