[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-q"
[project]
name = "nsa-vibe"
version = "0.1.1"
description = "Native Sparse Attention (NSA) with CPU fallbacks, FA-2 wrappers, and Triton selection"
requires-python = ">=3.10"
authors = [{ name = "NSA Authors" }]
readme = "README.md"
dependencies = []

[tool.setuptools]
packages = ["nsa"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
